[package]
name = "git-line-changes"
version = "0.1.0"
description = "A cli tool to show the number of lines changed in a git repository"
authors = [ "Gen Ichino" ]
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.4"
